# generic_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: array.c  vec.c
src/include/: array.h  generic_c.h  vec.h
test/: array_test.c  vec_test.c
